--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     },
     "rules": {
         "strict": 2,
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "max-len": [2, 180]
     }
 }
