--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint lib/**/*.js",
-    "lint:fix": "eslint lib/**/*.js --fix"
+    "lint:fix": "eslint lib/**/*.js --fix",
+    "tsc": "tsc"
   },
   "dependencies": {
     "@loopback/context": "^1.18.0",
+    "@types/confidence": "^1.4.30",
     "async": "^2.6.2",
     "confidence": "^4.0.2",
     "cookie": "^0.3.1",
@@ -33,9 +35,18 @@
     "openapi-request-validator": "^3.8.1",
     "path-to-regexp": "^3.0.0",
     "rxjs": "^5.0.0",
-    "set-cookie-parser": "^2.3.5"
+    "set-cookie-parser": "^2.3.5",
+    "typescript": "^3.5.2"
   },
   "devDependencies": {
+    "@types/async": "^3.0.0",
+    "@types/cookie": "^0.3.3",
+    "@types/debug": "^4.1.4",
+    "@types/got": "^9.6.0",
+    "@types/http-errors": "^1.6.1",
+    "@types/koa": "^2.0.48",
+    "@types/lodash": "^4.14.134",
+    "@types/set-cookie-parser": "0.0.5",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
@@ -45,7 +56,7 @@
     "nodemon": "^1.19.1",
     "pre-commit": "^1.2.2"
   },
-  "pre-commit":[
+  "pre-commit": [
     "lint"
   ],
   "jest": {
