--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/debug": "^4.1.5",
     "@types/got": "^9.6.9",
     "@types/http-errors": "^1.6.3",
+    "@types/jest": "^24.0.25",
     "@types/koa": "^2.11.0",
     "@types/lodash": "^4.14.149",
     "@types/set-cookie-parser": "0.0.6",
