--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@loopback/context": "^1.25.0",
+    "@types/request": "^2.48.4",
     "async": "^3.1.0",
     "confidence": "^4.0.2",
     "cookie": "^0.4.0",
@@ -35,6 +36,8 @@
     "openapi-request-coercer": "^2.4.0",
     "openapi-request-validator": "^4.2.0",
     "path-to-regexp": "^6.1.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "rxjs": "^6.5.4",
     "set-cookie-parser": "^2.4.1",
     "typescript": "^3.7.4"
