--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compositjs",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Composing services",
   "author": "rahulrkr@hotmail.com",
   "main": "index.js",
@@ -21,23 +21,25 @@
     "build:watch": "tsc --watch"
   },
   "dependencies": {
-    "@loopback/context": "^3.13.2",
-    "async": "^3.2.0",
-    "confidence": "^5.0.0",
+    "@loopback/context": "^3.15.0",
+    "confidence": "^5.0.1",
     "cookie": "^0.4.1",
     "debug": "^4.3.1",
-    "got": "^11.8.1",
+    "got": "^11.8.2",
     "http-errors": "^1.8.0",
     "hystrixjs": "^0.2.0",
-    "koa": "^2.13.0",
-    "lodash": "^4.17.20",
-    "openapi-default-setter": "^7.0.1",
-    "openapi-request-coercer": "^7.1.0",
-    "openapi-request-validator": "^7.2.0",
+    "koa": "^2.13.1",
+    "lodash": "^4.17.21",
+    "memoizee": "^0.4.15",
+    "node-cache": "^5.1.2",
+    "openapi-default-setter": "^7.2.3",
+    "openapi-request-coercer": "^7.5.0",
+    "openapi-request-validator": "^7.4.0",
     "path-to-regexp": "^6.2.0",
-    "rxjs": "^6.6.3",
-    "set-cookie-parser": "^2.4.6",
-    "typescript": "^4.1.3"
+    "rxjs": "^6.6.7",
+    "set-cookie-parser": "^2.4.8",
+    "typescript": "^4.2.3",
+    "undici": "^3.3.3"
   },
   "devDependencies": {
     "@types/async": "^3.2.5",
@@ -46,25 +48,25 @@
     "@types/debug": "^4.1.5",
     "@types/got": "^9.6.11",
     "@types/http-errors": "^1.8.0",
-    "@types/jest": "^26.0.19",
-    "@types/koa": "^2.11.6",
-    "@types/lodash": "^4.14.165",
+    "@types/jest": "^26.0.22",
+    "@types/koa": "^2.13.1",
+    "@types/lodash": "^4.14.168",
     "@types/set-cookie-parser": "2.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "chai": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "chai": "^4.3.4",
     "chai-http": "^4.3.0",
-    "eslint": "^7.16.0",
+    "eslint": "^7.23.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
-    "mocha": "^8.2.1",
-    "nodemon": "^2.0.6",
+    "mocha": "^8.3.2",
+    "nodemon": "^2.0.7",
     "pre-commit": "^1.2.2",
-    "ts-jest": "^26.4.4"
+    "ts-jest": "^26.5.4"
   },
   "pre-commit": [],
   "jest": {
