--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@loopback/context": "^3.15.0",
+    "@types/koa-bodyparser": "^4.3.0",
     "confidence": "^5.0.1",
     "cookie": "^0.4.1",
     "debug": "^4.3.1",
@@ -29,6 +30,7 @@
     "http-errors": "^1.8.0",
     "hystrixjs": "^0.2.0",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
     "lodash": "^4.17.21",
     "memoizee": "^0.4.15",
     "node-cache": "^5.1.2",
