--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compositjs",
-  "version": "0.1.3",
+  "version": "0.1.4-beta.0.0.2",
   "description": "Composing services",
   "author": "rahulrkr@hotmail.com",
   "main": "index.js",
@@ -9,8 +9,8 @@
     "url": "https://github.com/compositjs/compositjs.git"
   },
   "engines": {
-    "node": ">= 6.9.1",
-    "npm": "3.10.10"
+    "node": ">= 15.0.0",
+    "npm": "7.3.0"
   },
   "scripts": {
     "test": "jest --coverage",
@@ -27,7 +27,6 @@
     "cookie": "^0.4.1",
     "debug": "^4.3.1",
     "http-errors": "^1.8.0",
-    "hystrixjs": "^0.2.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "lodash": "^4.17.21",
@@ -36,7 +35,6 @@
     "openapi-request-coercer": "^7.5.0",
     "openapi-request-validator": "^7.4.0",
     "path-to-regexp": "^6.2.0",
-    "rxjs": "^6.6.7",
     "set-cookie-parser": "^2.4.8",
     "typescript": "^4.2.3",
     "undici": "^3.3.3"
